[package]
name = "cosmicache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
mysql_async = "0.29.0"
once_cell = "1.9.0"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.75"
#tokio = { version = "1.15.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "time", "sync", "parking_lot"] }
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
warp = "0.3.2"
